--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/svg+xml" href="./images/favicon.svg">
     <link rel="icon" type="image/png" href="./images/favicon.png">   
-    <title>Document</title>
+    <title>WEBSTUDIO</title>
 </head>
 <body>
     <header>
         <nav>
-            <a href="/">WEB STUDIO</a>
+            <a href="/">WEBSTUDIO</a>
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
@@ -79,7 +79,7 @@
     </main>
 
     <footer id="contacts">
-        <a href="/">WEB STUDIO</a>
+        <a href="/">WEBSTUDIO</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
