--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
 <body>
     <header>
         <nav>
-            <a href="/">WEBSTUDIO</a>
+            <a href="./index.html">WEBSTUDIO</a>
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
-                <li><a href="#contacts">Contacts</a></li>
+                <li><a href="">Contacts</a></li>
             </ul>
         </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-        </ul>
+        <address>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            </ul>
+        </address>
     </header>
 
     <main>
@@ -78,8 +80,8 @@
         </section>
     </main>
 
-    <footer id="contacts">
-        <a href="/">WEBSTUDIO</a>
+    <footer>
+        <a href="./index.html">WEBSTUDIO</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
